Changed language, added BE SEO

--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6CKEKP6LRV"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-  
-      gtag('config', 'G-6CKEKP6LRV');
-    </script>
-  
-  
-  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bij DeltaWeb begrijpen we dat uw online aanwezigheid essentieel is. Als vooraanstaand webdesign bureau bieden wij een gratis eerste ontwerp, geheel zonder verplichtingen. Of u nu een website wilt laten maken, een ervaren web designer zoekt of uw SEO wilt verbeteren, DeltaWeb staat voor u klaar. Onze op maat gemaakte oplossingen helpen uw bedrijf te groeien en online te schitteren. Ontdek de DeltaWeb ervaring en neem vandaag nog contact met ons op!">
