--- a/public_html/index.html
+++ b/public_html/index.html
@@ -243,6 +243,8 @@
         </div>
     </footer>
 
+    <a href="SEO/website-laten-maken-belgie.html"></a>
+
     <script src="script.js"></script>
 </body>
 </html>
