--- a/public_html/website-laten-maken-belgie.html
+++ b/public_html/website-laten-maken-belgie.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Bij DeltaWeb begrijpen we dat uw online aanwezigheid essentieel is. Als vooraanstaand webdesign bureau bieden wij een gratis eerste ontwerp, geheel zonder verplichtingen. Of u nu een website wilt laten maken, een ervaren web designer zoekt of uw SEO wilt verbeteren, DeltaWeb staat voor u klaar. Onze op maat gemaakte oplossingen helpen uw bedrijf te groeien en online te schitteren. Ontdek de DeltaWeb ervaring en neem vandaag nog contact met ons op!">
 
     <title>DeltaWeb</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/custom.css">
-    <link rel="shortcut icon" href="../img/Favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/custom.css">
+    <link rel="shortcut icon" href="./img/Favicon.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/3d68587050.js" crossorigin="anonymous"></script>
 
 </head>
@@ -24,7 +24,7 @@
     <header class="py-10 flex shadow-lg">
         <nav class="w-full px-52 navbar">
             <div class="col-start-1 flex justify-center items-center logo" id="topbar">
-                <a href="https://delta-web.be"><img src="../img/logo/LOGO_NOBG_BLACK_CROPPED_SMALL.png" alt="Logo"  class="w-32 logoImg"></a>
+                <a href="https://delta-web.be"><img src="./img/logo/LOGO_NOBG_BLACK_CROPPED_SMALL.png" alt="Logo"  class="w-32 logoImg"></a>
                                 
                 <a href="javascript:void(0);" onclick="dropdown()" id="hamb">
                     <i class="fa-solid fa-bars" id="hamburger"></i>
@@ -75,7 +75,7 @@
 
     <!-- FOOTER -->
     <footer class="bg-primary py-20">
-        <a href="https://delta-web.be"><img src="../img/logo/LOGO_NOBG_WHITE_CROPPED.png" alt="Logo" class="w-64 left-0 right-0 ml-auto mr-auto pb-10"></a>
+        <a href="https://delta-web.be"><img src="./img/logo/LOGO_NOBG_WHITE_CROPPED.png" alt="Logo" class="w-64 left-0 right-0 ml-auto mr-auto pb-10"></a>
 
         <div class="grid px-52 text-center footerLinks">
             <div class="col-start-1 link link1">
@@ -112,6 +112,6 @@
         </div>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
 
 </body>
