added SEO sites

--- a/public_html/website-laten-maken-limburg.html
+++ b/public_html/website-laten-maken-limburg.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bij DeltaWeb begrijpen we dat uw online aanwezigheid essentieel is. Als vooraanstaand webdesign bureau bieden wij een gratis eerste ontwerp, geheel zonder verplichtingen. Of u nu een website wilt laten maken, een ervaren web designer zoekt of uw SEO wilt verbeteren, DeltaWeb staat voor u klaar. Onze op maat gemaakte oplossingen helpen uw bedrijf te groeien en online te schitteren. Ontdek de DeltaWeb ervaring en neem vandaag nog contact met ons op!">
 
-    <title>Website laten maken België - DeltaWeb</title>
+    <title>Website laten maken Limburg - DeltaWeb</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/custom.css">
     <link rel="shortcut icon" href="./img/Favicon.jpg" type="image/x-icon">
@@ -47,7 +47,7 @@
     </header>
 
     <section class="px-52 py-20">
-        <h1 class="text-6xl text-butler text-primary text-center">Website laten maken in België</h1>
+        <h1 class="text-6xl text-butler text-primary text-center">Website laten maken in Limburg</h1>
         <p class="text-black-75 text-lg mt-4 text-center">Wil je een professionele website laten maken in België die jouw bedrijf helpt groeien? Bij DeltaWeb ontwerpen en ontwikkelen we websites op maat die niet alleen mooi zijn, maar ook functioneel, gebruiksvriendelijk en geoptimaliseerd voor zoekmachines. Of je nu een kleine zelfstandige, een KMO, of een groot bedrijf bent, wij zorgen ervoor dat jouw online aanwezigheid een blijvende indruk maakt.</p>
 
         <h1 class="text-4xl text-butler mt-10">Waarom DeltaWeb?</h1>
