--- a/public_html/index.html
+++ b/public_html/index.html
@@ -239,7 +239,7 @@
                     <li><a href="https://www.instagram.com/deltaweb_webdesign/" target="_blank" class="px-2 text-2xl hover:text-neutral-400"><i class="fa-brands fa-instagram"></i></a></li>
                     <li><a href="https://www.linkedin.com/company/deltaweb-webdesign/" target="_blank" class="px-2 text-2xl hover:text-neutral-400"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 </ul>
-            </div>
+            </div>q
         </div>
     </footer>
     <script src="script.js"></script>
