--- a/public_html/index.html
+++ b/public_html/index.html
@@ -119,6 +119,20 @@
         </div>
     </section>
 
+    <!-- Articles -->
+    <!-- <section class="px-40 py-28 grid grid-cols-3 gap-5">
+        <div class="col-start-1 bg-black-10 p-10 rounded-t-xl">
+
+        </div>
+        <div class="col-start-2 bg-black-10 p-10 rounded-t-xl">
+
+        </div>
+        <div class="col-start-3 bg-black-10 p-10 rounded-t-xl">
+
+        </div>
+
+    </section> -->
+
 
     <!-- SECTION 5 -->
     <section id="section5" class="px-52 py-28 bg-black-5 flex flex-col items-center sectionResp">
