fixed article bugs

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -155,13 +155,27 @@
             
             <div class="p-10">
                 <h3 class="text-primary text-3xl font-semibold">Van SSL tot Back-ups: De Basis van Websitebeveiliging</h3>
-                <p class="text-black-75 text-lg">Wil je je bereik wereldwijd vergroten? Ontdek hoe een meertalige website niet alleen je zichtbaarheid vergroot, maar ook de gebruikerservaring verbetert en je merk versterkt!</p>
+                <p class="text-black-75 text-lg">Wil je je website beschermen tegen cyberdreigingen? Ontdek hoe je je site veilig maakt met SSL, back-ups en meer om het vertrouwen van je bezoekers te waarborgen en financiële schade te voorkomen!</p>
 
                 <div class="text-center pt-10">
                     <a href="articles/basis-van-sitebeveiliging.html" target="_blank"><button class="text-black-5 bg-secondary px-6 py-3 shadow-lg transition-color btn1">Lees meer</button></a>
                 </div>
             </div>
         </div>
+
+        <!-- <div class="col-start-3 bg-black-5 rounded-xl reveal articleCard">
+            <img src="img/security-article.jpg" alt="Less is more" class="rounded-t-xl h-72 object-cover border-2">
+            <p class="text-black-50 text-center text-sm mt-2">24/12/2024</p>
+            
+            <div class="p-10">
+                <h3 class="text-primary text-3xl font-semibold">Van SSL tot Back-ups: De Basis van Websitebeveiliging</h3>
+                <p class="text-black-75 text-lg">Wil je je bereik wereldwijd vergroten? Ontdek hoe een meertalige website niet alleen je zichtbaarheid vergroot, maar ook de gebruikerservaring verbetert en je merk versterkt!</p>
+
+                <div class="text-center pt-10">
+                    <a href="articles/basis-van-sitebeveiliging.html" target="_blank"><button class="text-black-5 bg-secondary px-6 py-3 shadow-lg transition-color btn1">Lees meer</button></a>
+                </div>
+            </div>
+        </div> -->
 
     </section>
 
