--- a/public_html/index.html
+++ b/public_html/index.html
@@ -154,7 +154,7 @@
             <p class="text-black-50 text-center text-sm mt-2">24/12/2024</p>
             
             <div class="p-10">
-                <h3 class="text-primary text-3xl font-semibold">Van SSL tot Back-ups: De Basis van Websitebeveiliging</h3>
+                <h3 class="text-primary text-3xl font-semibold flex-wrap">De Basis van Websitebeveiliging</h3>
                 <p class="text-black-75 text-lg">Wil je je website beschermen tegen cyberdreigingen? Ontdek hoe je je site veilig maakt met SSL, back-ups en meer om het vertrouwen van je bezoekers te waarborgen en financiële schade te voorkomen!</p>
 
                 <div class="text-center pt-10">
