--- a/public_html/aanbod.html
+++ b/public_html/aanbod.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bij DeltaWeb begrijpen we dat uw online aanwezigheid essentieel is. Als vooraanstaand webdesign bureau bieden wij een gratis eerste ontwerp, geheel zonder verplichtingen. Of u nu een website wilt laten maken, een ervaren web designer zoekt of uw SEO wilt verbeteren, DeltaWeb staat voor u klaar. Onze op maat gemaakte oplossingen helpen uw bedrijf te groeien en online te schitteren. Ontdek de DeltaWeb ervaring en neem vandaag nog contact met ons op!">
-
+    <meta name="description" content="Ontdek de diensten van DeltaWeb: professionele webontwikkeling, hosting, onderhoud en SEO-optimalisatie. Alles wat je nodig hebt voor een succesvolle online aanwezigheid.">
     <title>DeltaWeb</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
