--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bij DeltaWeb begrijpen we dat uw online aanwezigheid essentieel is. Als vooraanstaand webdesign bureau bieden wij een gratis eerste ontwerp, geheel zonder verplichtingen. Of u nu een website wilt laten maken, een ervaren web designer zoekt of uw SEO wilt verbeteren, DeltaWeb staat voor u klaar. Onze op maat gemaakte oplossingen helpen uw bedrijf te groeien en online te schitteren. Ontdek de DeltaWeb ervaring en neem vandaag nog contact met ons op!">
+    <meta name="description" content="DeltaWeb biedt op maat gemaakte websites, inclusief hosting, onderhoud en SEO-optimalisatie. Professionele webontwikkeling met aandacht voor detail en klanttevredenheid.">
     <title>DeltaWeb</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
