Added titles to pages

--- a/public_html/over-ons.html
+++ b/public_html/over-ons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Leer DeltaWeb kennen: een webdesignbedrijf dat zich richt op het leveren van hoogwaardige websites met aandacht voor detail, klanttevredenheid en duurzame online oplossingen.">
-    <title>DeltaWeb</title>
+    <title>DeltaWeb - Over Ons</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="shortcut icon" href="./img/Favicon.jpg" type="image/x-icon">
