--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DeltaWeb biedt op maat gemaakte websites, inclusief hosting, onderhoud en SEO-optimalisatie. Professionele webontwikkeling met aandacht voor detail en klanttevredenheid.">
-    <title>DeltaWeb</title>
+    <meta name="description" content="Ontdek de diensten van DeltaWeb: professionele webontwikkeling, hosting, onderhoud en SEO-optimalisatie. Alles wat je nodig hebt voor een succesvolle online aanwezigheid.">
+    <title>DeltaWeb - Contact</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="shortcut icon" href="./img/Favicon.jpg" type="image/x-icon">
