--- a/public_html/ontwerp_aanvragen.html
+++ b/public_html/ontwerp_aanvragen.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ontdek de diensten van DeltaWeb: professionele webontwikkeling, hosting, onderhoud en SEO-optimalisatie. Alles wat je nodig hebt voor een succesvolle online aanwezigheid.">
-    <title>DeltaWeb</title>
+    <title>DeltaWeb - Gratis Ontwerp Aanvragen</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/custom.css">
     <link rel="shortcut icon" href="./img/Favicon.jpg" type="image/x-icon">
