Resized article images

--- a/public_html/website-laten-maken-oost-vlaanderen.html
+++ b/public_html/website-laten-maken-oost-vlaanderen.html
@@ -47,7 +47,7 @@
     </header>
 
     <section class="px-52 py-20">
-        <h1 class="text-6xl text-butler text-primary text-center">Website laten maken in Bilzen</h1>
+        <h1 class="text-6xl text-butler text-primary text-center">Website laten maken in Oost-Vlaanderen</h1>
         <p class="text-black-75 text-lg mt-4 text-center">Wil je een professionele website laten maken in België die jouw bedrijf helpt groeien? Bij DeltaWeb ontwerpen en ontwikkelen we websites op maat die niet alleen mooi zijn, maar ook functioneel, gebruiksvriendelijk en geoptimaliseerd voor zoekmachines. Of je nu een kleine zelfstandige, een KMO, of een groot bedrijf bent, wij zorgen ervoor dat jouw online aanwezigheid een blijvende indruk maakt.</p>
 
         <h1 class="text-4xl text-butler mt-10">Waarom DeltaWeb?</h1>
